[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scripts/Control.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Decors/BateauArrierePlan.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/WalkingArea_Mask/Bateau_Pont.tres" type="NavigationPolygon" id=3]
[ext_resource path="res://Scenes/Decors/Bateau_PremierPlan.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Systeme/Menu_interactions.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Systeme/Debug.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/PA.gd" type="Script" id=9]
[ext_resource path="res://Scripts/WalkArea.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Personnage.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Systeme/saveEtLoad.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/UI/Font/Gravity-Regular.otf" type="DynamicFontData" id=13]
[ext_resource path="res://Scripts/gMouseCollider.gd" type="Script" id=14]
[ext_resource path="res://Assets/Son/Mer+VentV1.ogg" type="AudioStream" id=15]
[ext_resource path="res://Scripts/DebugLabel3.gd" type="Script" id=16]
[ext_resource path="res://Scenes/Decors/Background.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scripts/PNJ/PNJ_Interaction.gd" type="Script" id=19]
[ext_resource path="res://Scenes/Systeme/Dialogues.tscn" type="PackedScene" id=27]
[ext_resource path="res://Assets/UI/Carnet/Font/Font_SousTitre1_Livre.tres" type="DynamicFont" id=36]
[ext_resource path="res://Scenes/TransitionCiel.tscn" type="PackedScene" id=37]
[ext_resource path="res://Scripts/Plantes.gd" type="Script" id=53]

[sub_resource type="CircleShape2D" id=1]
radius = 107.72

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 256, 256 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 175.242, 325.854 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.262745 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.262745 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.227451, 0.203922, 0.203922, 0.360784 )

[sub_resource type="DynamicFont" id=8]
size = 22
outline_color = Color( 0, 1, 0.0862745, 1 )
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.231373 )

[sub_resource type="DynamicFont" id=10]
size = 22
font_data = ExtResource( 13 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Assets/UI/Font/Quicksand_Bold.otf"

[sub_resource type="DynamicFont" id=12]
size = 40
font_data = SubResource( 11 )

[node name="ScenePrincipale" type="Node2D"]
script = ExtResource( 1 )

[node name="saveEtLoad" parent="." instance=ExtResource( 12 )]

[node name="Background" parent="." instance=ExtResource( 17 )]
position = Vector2( -3008, -1344 )
scale = Vector2( -14.7, 1.2 )

[node name="Bateau_ArrierePlan" parent="." instance=ExtResource( 2 )]

[node name="Bateau" type="Node2D" parent="."]

[node name="WalkArea" type="Navigation2D" parent="Bateau"]
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Bateau/WalkArea"]
modulate = Color( 0.113725, 0.443137, 0.517647, 1 )
navpoly = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="Bateau/WalkArea"]

[node name="Jardin" type="Area2D" parent="Bateau"]
position = Vector2( 8.20215, 133.617 )
scale = Vector2( 1, 0.887283 )
collision_layer = 8
collision_mask = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bateau/Jardin"]
position = Vector2( -2317.07, -559.217 )
scale = Vector2( 1.3586, 1 )
polygon = PoolVector2Array( -985.671, 1274.19, 2311.84, 1274.19, 2877.13, 336.496, 2358.95, -456.938, -985.671, -456.938 )

[node name="YSort" type="YSort" parent="Bateau"]

[node name="gMouseCollider" type="Area2D" parent="Bateau/YSort"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bateau/YSort/gMouseCollider"]
position = Vector2( 839.52, -760.618 )
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="Bateau/YSort"]
visible = false

[node name="Player" parent="Bateau/YSort" instance=ExtResource( 11 )]
position = Vector2( -3712, -64 )
scale = Vector2( 1, 1 )
speed = 400

[node name="Camera2D" type="Camera2D" parent="Bateau/YSort/Player"]
visible = false
current = true
script = ExtResource( 5 )

[node name="Plante" type="YSort" parent="Bateau/YSort"]
script = ExtResource( 53 )

[node name="PNJ" type="YSort" parent="Bateau/YSort"]
script = ExtResource( 19 )

[node name="MasqueTransparent" type="Area2D" parent="Bateau/YSort"]
position = Vector2( -6400, -960 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bateau/YSort/MasqueTransparent"]
position = Vector2( 0, 192 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="Bateau/YSort"]

[node name="Porte" type="Area2D" parent="Bateau"]
position = Vector2( -3964.3, -164.435 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bateau/Porte"]
position = Vector2( -130.516, -40.9079 )
shape = SubResource( 3 )

[node name="Bateau_PremierPlan" parent="." instance=ExtResource( 4 )]
position = Vector2( -5114.46, 456.847 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PA" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_top = 87.0
margin_right = 48.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 36 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PA : "
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugPanel" parent="CanvasLayer/Debug" instance=ExtResource( 8 )]
margin_left = 24.0
margin_top = 64.0
margin_right = 384.0
margin_bottom = 364.0

[node name="DebugLabel" type="Label" parent="CanvasLayer/Debug"]
visible = false
margin_left = 1536.0
margin_top = 192.0
margin_right = 1864.0
margin_bottom = 288.0
grow_horizontal = 0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0588235, 0.988235, 0, 1 )
text = "Jardin :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel4" type="Label" parent="CanvasLayer/Debug"]
visible = false
margin_left = 768.0
margin_top = 64.0
margin_right = 1096.0
margin_bottom = 160.0
grow_horizontal = 0
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0588235, 0.988235, 0, 1 )
text = "JOUR : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel2" type="Label" parent="CanvasLayer/Debug"]
visible = false
margin_left = 1536.0
margin_top = 64.0
margin_right = 1864.0
margin_bottom = 168.0
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.105882, 1, 0, 1 )
text = "Zoom :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel3" type="Label" parent="CanvasLayer/Debug"]
visible = false
margin_left = 64.0
margin_top = 704.0
margin_right = 312.0
margin_bottom = 976.0
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 1, 0.156863, 1 )
text = "Plante Description"
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogues" parent="CanvasLayer" instance=ExtResource( 27 )]
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuInteractions" parent="CanvasLayer/Control" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_right = 1.0
margin_left = 0.0
margin_right = 0.0

[node name="ciel transition" parent="CanvasLayer" instance=ExtResource( 37 )]
visible = false

[node name="Transition" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false

[node name="Jour" type="Label" parent="CanvasLayer/Transition"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -45.5
margin_right = 960.0
margin_bottom = 45.5
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Jour"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musique" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
[connection signal="mouse_entered" from="Bateau/WalkArea/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Bateau/WalkArea/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Bateau/Jardin" to="." method="_on_Jardin_input_event"]
[connection signal="area_shape_entered" from="Bateau/YSort/gMouseCollider" to="Bateau/YSort/gMouseCollider" method="_on_gMouseCollider_area_shape_entered"]
[connection signal="area_shape_exited" from="Bateau/YSort/gMouseCollider" to="Bateau/YSort/gMouseCollider" method="_on_gMouseCollider_area_shape_exited"]
[connection signal="anim_over" from="Bateau/YSort/Player" to="." method="_on_Player_anim_over"]
[connection signal="debug_plant_description" from="Bateau/YSort/Plante" to="CanvasLayer/Debug/DebugLabel3" method="_on_Plante_debug_plant_description"]
[connection signal="Fin_Conversation" from="Bateau/YSort/PNJ" to="." method="_on_PNJ_Fin_Conversation"]
[connection signal="area_shape_entered" from="Bateau/YSort/MasqueTransparent" to="Bateau/YSort/Plante" method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="Bateau/YSort/MasqueTransparent" to="Bateau/YSort/Plante" method="_on_MasqueTransparent_area_shape_exited"]
[connection signal="input_event" from="Bateau/Porte" to="." method="_on_Porte_input_event"]
[connection signal="mouse_entered" from="Bateau/Porte" to="." method="_on_Porte_mouse_entered"]
[connection signal="mouse_exited" from="Bateau/Porte" to="." method="_on_Porte_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/MenuInteractions/HBoxContainer/Button_Spray" to="." method="_on_Button_Spray_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MenuInteractions/HBoxContainer/Button_Cut" to="." method="_on_Button_Cut_pressed"]
[connection signal="gui_input" from="CanvasLayer/Transition" to="CanvasLayer/Transition" method="_on_Transition_gui_input"]
[connection signal="transition_over" from="CanvasLayer/Transition" to="." method="_on_Transition_transition_over"]

[editable path="CanvasLayer/Control/MenuInteractions"]
